Create browse domain
Create books feature, browse store, filters components

--- a/libs/client-web/shared/ui/project.json
+++ b/libs/client-web/shared/ui/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui",
+  "name": "client-web-shared-ui",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/client-web/shared/ui/src",
   "prefix": "lib",
