--- a/apps/client-web/tsconfig.json
+++ b/apps/client-web/tsconfig.json
@@ -7,7 +7,10 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "isolatedModules": true,
+    "sourceMap": false,
+    "inlineSourceMap": false
   },
   "files": [],
   "include": [],
