Create book route and detail-row component

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -33,6 +33,9 @@
       "@e-commerce/client-web/browse/data-access": [
         "libs/client-web/browse/data-access/src/index.ts"
       ],
+      "@e-commerce/client-web/browse/feature/book": [
+        "libs/client-web/browse/feature/book/src/index.ts"
+      ],
       "@e-commerce/client-web/browse/feature/books": [
         "libs/client-web/browse/feature/books/src/index.ts"
       ],
