Create cart store and cart sidebar component

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -48,6 +48,12 @@
       "@e-commerce/client-web/cart/data-access": [
         "libs/client-web/cart/data-access/src/index.ts"
       ],
+      "@e-commerce/client-web/cart/feature/cart-sidebar": [
+        "libs/client-web/cart/feature/cart-sidebar/src/index.ts"
+      ],
+      "@e-commerce/client-web/cart/ui": [
+        "libs/client-web/cart/ui/src/index.ts"
+      ],
       "@e-commerce/client-web/shared/data-access": [
         "libs/client-web/shared/data-access/src/index.ts"
       ],
