--- a/libs/client-web/account/ui/project.json
+++ b/libs/client-web/account/ui/project.json
@@ -1,16 +1,16 @@
 {
-  "name": "client-web-cart-ui",
+  "name": "client-web-account-ui",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/client-web/cart/ui/src",
+  "sourceRoot": "libs/client-web/account/ui/src",
   "prefix": "lib",
   "projectType": "library",
-  "tags": ["scope:client-web", "domain:cart", "type:ui"],
+  "tags": ["scope:client-web", "domain:account", "type:ui"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/client-web/cart/ui/jest.config.ts"
+        "jestConfig": "libs/client-web/account/ui/jest.config.ts"
       }
     },
     "lint": {
