--- a/libs/client-web/cart/data-access/project.json
+++ b/libs/client-web/cart/data-access/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "data-access",
+  "name": "client-web-cart-data-access",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/client-web/cart/data-access/src",
   "prefix": "lib",
