--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/effects": "^18.0.2",
     "@ngrx/eslint-plugin": "^18.0.2",
     "@ngrx/operators": "^18.0.2",
+    "@ngrx/signals": "^18.0.2",
     "@ngrx/store": "^18.0.2",
     "@ngrx/store-devtools": "^18.0.2",
     "@nx/angular": "19.6.5",
