Update navigation bar position to vertical and use the gap variable
Change layout of the app, navigation bar is an aside on the left of the
screen. Add toolbar as navigation for mobile and table media queries.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,9 @@
       "@e-commerce/client-web/account/feature/orders": [
         "libs/client-web/account/feature/orders/src/index.ts"
       ],
+      "@e-commerce/client-web/account/feature/settings": [
+        "libs/client-web/account/feature/settings/src/index.ts"
+      ],
       "@e-commerce/client-web/account/feature/shell": [
         "libs/client-web/account/feature/shell/src/index.ts"
       ],
