--- a/apps/client-web/project.json
+++ b/apps/client-web/project.json
@@ -4,16 +4,11 @@
   "projectType": "application",
   "prefix": "app",
   "sourceRoot": "apps/client-web/src",
-  "tags": [
-    "scope:client-web",
-    "type:app"
-  ],
+  "tags": ["scope:client-web", "type:app"],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/client-web",
         "index": "apps/client-web/src/index.html",
@@ -27,20 +22,7 @@
             "input": "apps/client-web/public"
           }
         ],
-        "styles": [
-          "node_modules/primeng/resources/primeng.min.css",
-          "apps/client-web/src/styles.scss",
-          {
-            "input": "apps/client-web/src/assets/themes/light.scss",
-            "bundleName": "light",
-            "inject": false
-          },
-          {
-            "input": "apps/client-web/src/assets/themes/dark.scss",
-            "bundleName": "dark",
-            "inject": false
-          }
-        ],
+        "styles": ["apps/client-web/src/styles.scss"],
         "scripts": []
       },
       "configurations": {
@@ -94,9 +76,7 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/client-web/jest.config.ts"
       }
