--- a/package.json
+++ b/package.json
@@ -44,9 +44,10 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "primeicons": "^7.0.0",
-    "primeng": "^17.18.8",
+    "primeng": "18.0.0-beta.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
+    "tailwindcss-primeui": "^0.3.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -84,6 +85,7 @@
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "@typescript-eslint/utils": "^7.16.0",
+    "autoprefixer": "^10.4.20",
     "cypress": "^13.13.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
@@ -93,8 +95,10 @@
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~14.1.0",
     "nx": "19.6.5",
+    "postcss": "^8.4.47",
     "prettier": "^2.6.2",
     "prisma": "^5.18.0",
+    "tailwindcss": "^3.4.13",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
