--- a/package.json
+++ b/package.json
@@ -103,5 +103,8 @@
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
     "webpack-cli": "^5.1.4"
-  }
+  },
+  "trustedDependencies": [
+    "@nestjs/core"
+  ]
 }
