--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@angular/forms": "~18.1.0",
     "@angular/platform-browser": "~18.1.0",
     "@angular/platform-browser-dynamic": "~18.1.0",
+    "@angular/platform-server": "~18.2.0",
     "@angular/router": "~18.1.0",
     "@angular/service-worker": "~18.1.0",
+    "@angular/ssr": "~18.1.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.2",
@@ -27,7 +29,7 @@
     "@ngrx/signals": "^18.0.2",
     "@ngrx/store": "^18.0.2",
     "@ngrx/store-devtools": "^18.0.2",
-    "@nx/angular": "19.6.5",
+    "@nx/angular": "19.8.2",
     "@prisma/client": "^5.18.0",
     "@types/bcrypt": "^5.0.2",
     "@types/lodash-es": "^4.17.12",
@@ -38,6 +40,7 @@
     "class-validator": "^0.14.1",
     "eslint-plugin-deprecation": "^3.0.0",
     "eslint-plugin-rxjs": "^5.0.3",
+    "express": "~4.18.2",
     "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
     "passport": "^0.7.0",
@@ -64,21 +67,22 @@
     "@angular/pwa": "^18.2.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nrwl/nest": "19.6.5",
-    "@nx/cypress": "19.6.5",
-    "@nx/eslint": "19.6.5",
-    "@nx/eslint-plugin": "19.6.5",
-    "@nx/jest": "19.6.5",
-    "@nx/js": "19.6.5",
-    "@nx/nest": "19.6.5",
-    "@nx/node": "19.6.5",
-    "@nx/web": "19.6.5",
-    "@nx/webpack": "19.6.5",
-    "@nx/workspace": "19.6.5",
+    "@nrwl/nest": "19.8.2",
+    "@nx/cypress": "19.8.2",
+    "@nx/eslint": "19.8.2",
+    "@nx/eslint-plugin": "19.8.2",
+    "@nx/jest": "19.8.2",
+    "@nx/js": "19.8.2",
+    "@nx/nest": "19.8.2",
+    "@nx/node": "19.8.2",
+    "@nx/web": "19.8.2",
+    "@nx/webpack": "19.8.2",
+    "@nx/workspace": "19.8.2",
     "@schematics/angular": "~18.1.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/express": "4.17.14",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@types/passport-jwt": "^4.0.1",
@@ -94,7 +98,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~14.1.0",
-    "nx": "19.6.5",
+    "nx": "19.8.2",
     "postcss": "^8.4.47",
     "prettier": "^2.6.2",
     "prisma": "^5.18.0",
