--- a/apps/client-web/project.json
+++ b/apps/client-web/project.json
@@ -26,7 +26,9 @@
         "scripts": [],
         "server": "apps/client-web/src/main.server.ts",
         "polyfills": ["zone.js"],
-        "prerender": true,
+        "prerender": {
+          "discoverRoutes": true
+        },
         "ssr": {
           "entry": "apps/client-web/server.ts"
         }
