--- a/libs/client-web/cart/feature/order-process/project.json
+++ b/libs/client-web/cart/feature/order-process/project.json
@@ -1,16 +1,16 @@
 {
   "name": "client-web-cart-feature-order-process",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/client-web/order/feature/order-process/src",
+  "sourceRoot": "libs/client-web/cart/feature/order-process/src",
   "prefix": "lib",
   "projectType": "library",
-  "tags": ["scope:client-web", "domain:order", "type:feature"],
+  "tags": ["scope:client-web", "domain:cart", "type:feature"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/client-web/order/feature/order-process/jest.config.ts"
+        "jestConfig": "libs/client-web/cart/feature/order-process/jest.config.ts"
       }
     },
     "lint": {
