--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,9 @@
       "@e-commerce/client-web/account/data-access": [
         "libs/client-web/account/data-access/src/index.ts"
       ],
+      "@e-commerce/client-web/account/feature/information": [
+        "libs/client-web/account/feature/information/src/index.ts"
+      ],
       "@e-commerce/client-web/account/feature/orders": [
         "libs/client-web/account/feature/orders/src/index.ts"
       ],
