Added AuthService and CartService to root and change gap to 1rem

--- a/libs/client-web/account/feature/shell/project.json
+++ b/libs/client-web/account/feature/shell/project.json
@@ -4,7 +4,7 @@
   "sourceRoot": "libs/client-web/account/feature/shell/src",
   "prefix": "lib",
   "projectType": "library",
-  "tags": ["scope:client-web", "domain:account", "type:feature"],
+  "tags": ["scope:client-web", "domain:account", "type:shell"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
