--- a/libs/client-web/cart/feature/shell/project.json
+++ b/libs/client-web/cart/feature/shell/project.json
@@ -1,16 +1,16 @@
 {
-  "name": "client-web-account-settings",
+  "name": "client-web-cart-feature-shell",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/client-web/account/feature/settings/src",
+  "sourceRoot": "libs/client-web/cart/feature/shell/src",
   "prefix": "lib",
   "projectType": "library",
-  "tags": ["scope:client-web", "domain:account", "type:feature"],
+  "tags": ["scope:client-web", "domain:cart", "type:shell"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/client-web/account/feature/settings/jest.config.ts"
+        "jestConfig": "libs/client-web/cart/feature/shell/jest.config.ts"
       }
     },
     "lint": {
