Improved app routes and changed order of pipe operators in information store

--- a/libs/client-web/account/feature/addresses/project.json
+++ b/libs/client-web/account/feature/addresses/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "addresses",
+  "name": "client-web-account-feature-addresses",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/client-web/account/feature/addresses/src",
   "prefix": "lib",
