--- a/libs/client-web/account/feature/information/project.json
+++ b/libs/client-web/account/feature/information/project.json
@@ -1,20 +1,14 @@
 {
-  "name": "information",
+  "name": "cliet-web-account-feaure-information",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/client-web/account/feature/information/src",
   "prefix": "lib",
   "projectType": "library",
-  "tags": [
-    "scope:client-web",
-    "domain:account",
-    "type:feature"
-  ],
+  "tags": ["scope:client-web", "domain:account", "type:feature"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/client-web/account/feature/information/jest.config.ts"
       }
