--- a/libs/client-web/auth/feature/shell/project.json
+++ b/libs/client-web/auth/feature/shell/project.json
@@ -1,20 +1,14 @@
 {
-  "name": "client-web-auth-shell",
+  "name": "client-web-auth-feature-shell",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/client-web/auth/feature/shell/src",
   "prefix": "lib",
   "projectType": "library",
-  "tags": [
-    "scope:client-web",
-    "domain:auth",
-    "type:shell"
-  ],
+  "tags": ["scope:client-web", "domain:auth", "type:shell"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/client-web/auth/feature/shell/jest.config.ts"
       }
