--- a/libs/client-web/account/domain/addresses/project.json
+++ b/libs/client-web/account/domain/addresses/project.json
@@ -1,16 +1,16 @@
 {
-  "name": "client-web-account-feature-addresses",
+  "name": "addresses",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/client-web/account/feature/addresses/src",
+  "sourceRoot": "libs/client-web/account/domain/addresses/src",
   "prefix": "lib",
   "projectType": "library",
-  "tags": ["scope:client-web", "domain:account", "type:feature"],
+  "tags": ["scope:client-web", "type:domain", "domain:account"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/client-web/account/feature/addresses/jest.config.ts"
+        "jestConfig": "libs/client-web/account/domain/addresses/jest.config.ts"
       }
     },
     "lint": {
