--- a/package.json
+++ b/package.json
@@ -96,8 +96,7 @@
     "eslint-plugin-cypress": "^2.13.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-environment-node": "^29.4.1",
-    "jest-preset-angular": "~14.1.0",
+    "jest-preset-angular": "14.1.0",
     "nx": "20.0.8",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
