--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngrx/store": "^18.0.2",
     "@ngrx/store-devtools": "^18.0.2",
     "@nx/angular": "20.0.8",
+    "@primeng/themes": "18.0.0-rc.1",
     "@prisma/client": "^5.18.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/bcrypt": "^5.0.2",
@@ -48,7 +49,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "primeicons": "^7.0.0",
-    "primeng": "18.0.0-beta.2",
+    "primeng": "18.0.0-rc.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tailwindcss-primeui": "^0.3.4",
