--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngrx/store-devtools": "^18.0.2",
     "@nx/angular": "20.0.8",
     "@primeng/themes": "18.0.0-rc.1",
+    "@primevue/themes": "^4.2.3",
     "@prisma/client": "^5.18.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/bcrypt": "^5.0.2",
@@ -50,10 +51,13 @@
     "passport-local": "^1.0.0",
     "primeicons": "^7.0.0",
     "primeng": "18.0.0-rc.1",
+    "primevue": "^4.2.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tailwindcss-primeui": "^0.3.4",
     "tslib": "^2.3.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -76,6 +80,8 @@
     "@nx/js": "20.0.8",
     "@nx/nest": "20.0.8",
     "@nx/node": "20.0.8",
+    "@nx/vite": "20.0.8",
+    "@nx/vue": "20.0.8",
     "@nx/web": "20.0.8",
     "@nx/webpack": "20.0.8",
     "@nx/workspace": "20.0.8",
@@ -90,14 +96,22 @@
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "@typescript-eslint/utils": "^7.16.0",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.3.1",
+    "@vue/eslint-config-prettier": "7.1.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^2.4.1",
     "autoprefixer": "^10.4.20",
     "cypress": "^13.13.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-cypress": "^2.13.4",
+    "eslint-plugin-cypress": "^3.5.0",
+    "eslint-plugin-vue": "^9.16.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "14.1.0",
+    "jsdom": "~22.1.0",
     "nx": "20.0.8",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
@@ -106,6 +120,9 @@
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
+    "vite": "^5.0.0",
+    "vitest": "^1.3.1",
+    "vue-tsc": "^2.0.0",
     "webpack-cli": "^5.1.4"
   },
   "trustedDependencies": [
