Added nav component and set default layout

--- a/libs/admin-dashboard/core/domain/project.json
+++ b/libs/admin-dashboard/core/domain/project.json
@@ -5,6 +5,22 @@
   "projectType": "library",
   "tags": ["scope:admin-dashboard", "type:feature", "domain:core"],
   "targets": {
+    "build": {
+      "executor": "@nx/vite:build",
+      "outputs": ["{options.outputPath}"],
+      "defaultConfiguration": "production",
+      "options": {
+        "outputPath": "dist/libs/admin-dashboard/core/domain"
+      },
+      "configurations": {
+        "development": {
+          "mode": "development"
+        },
+        "production": {
+          "mode": "production"
+        }
+      }
+    },
     "test": {
       "executor": "@nx/vite:test",
       "outputs": ["{options.reportsDirectory}"],
