--- a/apps/admin-dashboard/project.json
+++ b/apps/admin-dashboard/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/admin-dashboard/src",
+  "tags": ["scope:admin-dashboard", "type:app"],
   "targets": {
     "build": {
       "executor": "@nx/vite:build",
