--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
     "vite": "^5.0.0",
+    "vite-plugin-dts": "~3.8.1",
     "vitest": "^1.3.1",
     "vue-tsc": "^2.0.0",
     "webpack-cli": "^5.1.4"
