--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "@primevue/themes": "^4.2.3",
     "@prisma/client": "^5.18.0",
     "@tailwindcss/container-queries": "^0.1.1",
+    "@tanstack/vue-query": "^5.60.6",
     "@types/bcrypt": "^5.0.2",
     "@types/lodash-es": "^4.17.12",
     "@types/passport-local": "^1.0.38",
-    "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -49,6 +49,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pinia": "^2.2.6",
     "primeicons": "^7.0.0",
     "primeng": "18.0.0-rc.1",
     "primevue": "^4.2.3",
@@ -110,6 +111,7 @@
     "eslint-plugin-vue": "^9.16.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "14.1.0",
     "jsdom": "~22.1.0",
     "nx": "20.0.8",
