--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,18 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@e-commerce/admin-dashboard/book/data-access": [
+        "libs/admin-dashboard/book/data-access/src/index.ts"
+      ],
+      "@e-commerce/admin-dashboard/book/feature/add-book": [
+        "libs/admin-dashboard/book/feature/add-book/src/index.ts"
+      ],
+      "@e-commerce/admin-dashboard/book/feature/book-list": [
+        "libs/admin-dashboard/book/feature/book-list/src/index.ts"
+      ],
+      "@e-commerce/admin-dashboard/book/feature/shell": [
+        "libs/admin-dashboard/book/feature/shell/src/index.ts"
+      ],
       "@e-commerce/admin-dashboard/core/domain": [
         "libs/admin-dashboard/core/domain/src/index.ts"
       ],
@@ -131,7 +143,8 @@
       ],
       "@e-commerce/client-web/shared/utils": [
         "libs/client-web/shared/utils/src/index.ts"
-      ]
+      ],
+      "@e-commerce/shared/api-models": ["libs/shared/api-models/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
