--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@e-commerce/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "main": "dist/apps/admin-dashboard/electron/main/main.js",
+  "scripts": {
+    "admin-dashboard:electron:dev": "nx electron admin-dashboard"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~18.1.0",
@@ -57,6 +60,7 @@
     "rxjs": "~7.8.0",
     "tailwindcss-primeui": "^0.3.4",
     "tslib": "^2.3.0",
+    "vite-plugin-electron": "^0.29.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "zone.js": "~0.14.3"
@@ -105,6 +109,8 @@
     "@vue/test-utils": "^2.4.1",
     "autoprefixer": "^10.4.20",
     "cypress": "^13.13.0",
+    "electron": "^33.2.0",
+    "electron-builder": "^25.1.8",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^3.5.0",
@@ -124,6 +130,7 @@
     "typescript": "~5.5.2",
     "vite": "^5.0.0",
     "vite-plugin-dts": "~3.8.1",
+    "vite-plugin-electron-renderer": "^0.14.6",
     "vitest": "^1.3.1",
     "vue-tsc": "^2.0.0",
     "webpack-cli": "^5.1.4"
@@ -135,10 +142,12 @@
     "@swc/core",
     "bcrypt",
     "cypress",
+    "electron",
     "esbuild",
     "lmdb",
     "msgpackr-extract",
     "nx",
-    "prisma"
+    "prisma",
+    "vue-demi"
   ]
 }
