--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@primeng/themes": "18.0.0-rc.1",
     "@primevue/themes": "^4.2.3",
     "@prisma/client": "^5.18.0",
+    "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/vue-query": "^5.60.6",
     "@types/bcrypt": "^5.0.2",
