Added page to list, add and remove books

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,19 @@
               {
                 "sourceTag": "type:feature",
                 "onlyDependOnLibsWithTags": [
+                  "type:domain",
+                  "type:ui",
+                  "type:data-access",
+                  "type:util",
+                  "type:api",
+                  "type:shared-data-access",
+                  "type:shared-util",
+                  "type:shared-ui"
+                ]
+              },
+              {
+                "sourceTag": "type:domain",
+                "onlyDependOnLibsWithTags": [
                   "type:ui",
                   "type:data-access",
                   "type:util",
