--- a/libs/admin-dashboard/core/data-access/tsconfig.spec.json
+++ b/libs/admin-dashboard/core/data-access/tsconfig.spec.json
@@ -1,13 +1,16 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../../../../dist/out-tsc",
-    "types": ["vite/client"]
+    "outDir": "../../../../dist/out-tsc",
+    "types": [
+      "vitest/globals",
+      "vitest/importMeta",
+      "vite/client",
+      "node",
+      "vitest"
+    ]
   },
-  "exclude": [
-    "src/**/__tests__/*",
-    "src/**/*.spec.vue",
-    "src/**/*.test.vue",
+  "include": [
     "vite.config.ts",
     "vite.config.mts",
     "vitest.config.ts",
@@ -19,13 +22,7 @@
     "src/**/*.test.js",
     "src/**/*.spec.js",
     "src/**/*.test.jsx",
-    "src/**/*.spec.jsx"
-  ],
-  "include": [
-    "src/**/*.js",
-    "src/**/*.jsx",
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue"
+    "src/**/*.spec.jsx",
+    "src/**/*.d.ts"
   ]
 }
