Added data-access and feature libs to admin-dashboard auth

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -121,6 +121,14 @@
                   "type:shared-data-access",
                   "type:shared-util"
                 ]
+              },
+              {
+                "sourceTag": "scope:admin-dashboard",
+                "onlyDependOnLibsWithTags": [
+                  "scope:admin-dashboard",
+                  "scope:client-web",
+                  "scope:api"
+                ]
               }
             ]
           }
