--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@ngrx/store": "^18.0.2",
     "@ngrx/store-devtools": "^18.0.2",
     "@nx/angular": "20.0.8",
-    "@primeng/themes": "18.0.0-rc.2",
+    "@primeng/themes": "18.0.0",
     "@primevue/themes": "^4.2.3",
     "@prisma/client": "^5.18.0",
     "@supabase/supabase-js": "^2.46.2",
@@ -56,7 +56,7 @@
     "passport-local": "^1.0.0",
     "pinia": "^2.2.6",
     "primeicons": "^7.0.0",
-    "primeng": "18.0.0-rc.2",
+    "primeng": "18.0.0",
     "primevue": "^4.2.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
