--- a/libs/admin-dashboard/auth/feature/register/project.json
+++ b/libs/admin-dashboard/auth/feature/register/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/admin-dashboard/auth/feature/register/src",
   "projectType": "library",
-  "tags": ["scope:admin-dashboard", "domain:auth", "type:register"],
+  "tags": ["scope:admin-dashboard", "domain:auth", "type:feature"],
   "targets": {
     "build": {
       "executor": "@nx/vite:build",
