--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@e-commerce/source",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "main": "dist/apps/admin-dashboard/electron/main/main.js",
   "scripts": {
@@ -8,139 +8,142 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~18.1.0",
-    "@angular/common": "~18.1.0",
-    "@angular/compiler": "~18.1.0",
-    "@angular/core": "~18.1.0",
-    "@angular/forms": "~18.1.0",
-    "@angular/platform-browser": "~18.1.0",
-    "@angular/platform-browser-dynamic": "~18.1.0",
-    "@angular/platform-server": "~18.2.0",
-    "@angular/router": "~18.1.0",
-    "@angular/service-worker": "~18.1.0",
-    "@angular/ssr": "~18.1.0",
-    "@nestjs/common": "^10.0.2",
-    "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.0.2",
+    "@angular/animations": "~19.0.3",
+    "@angular/cdk": "^19.0.2",
+    "@angular/common": "~19.0.3",
+    "@angular/compiler": "~19.0.3",
+    "@angular/core": "~19.0.3",
+    "@angular/forms": "~19.0.3",
+    "@angular/platform-browser": "~19.0.3",
+    "@angular/platform-browser-dynamic": "~19.0.3",
+    "@angular/platform-server": "~19.0.3",
+    "@angular/router": "~19.0.3",
+    "@angular/service-worker": "~19.0.3",
+    "@angular/ssr": "~19.0.4",
+    "@nestjs/common": "^10.4.15",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^10.4.15",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.2",
-    "@nestjs/swagger": "^7.4.0",
-    "@ngrx/effects": "^18.0.2",
-    "@ngrx/eslint-plugin": "^18.0.2",
-    "@ngrx/operators": "^18.0.2",
-    "@ngrx/signals": "^18.0.2",
-    "@ngrx/store": "^18.0.2",
-    "@ngrx/store-devtools": "^18.0.2",
-    "@nx/angular": "20.0.8",
-    "@primeng/themes": "18.0.0",
-    "@primevue/themes": "^4.2.3",
-    "@prisma/client": "^5.18.0",
-    "@supabase/supabase-js": "^2.46.2",
+    "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/swagger": "^8.1.0",
+    "@ngrx/effects": "^18.1.1",
+    "@ngrx/eslint-plugin": "^18.1.1",
+    "@ngrx/operators": "^18.1.1",
+    "@ngrx/signals": "^18.1.1",
+    "@ngrx/store": "^18.1.1",
+    "@ngrx/store-devtools": "^18.1.1",
+    "@nx/angular": "20.2.1",
+    "@primeng/themes": "19.0.0-rc.1",
+    "@primevue/themes": "^4.2.4",
+    "@prisma/client": "^6.0.1",
+    "@supabase/supabase-js": "^2.47.3",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@tanstack/vue-query": "^5.60.6",
+    "@tanstack/vue-query": "^5.62.3",
     "@types/bcrypt": "^5.0.2",
     "@types/lodash-es": "^4.17.12",
     "@types/passport-local": "^1.0.38",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "eslint-plugin-deprecation": "^3.0.0",
     "eslint-plugin-rxjs": "^5.0.3",
-    "express": "~4.18.2",
+    "express": "~4.21.2",
     "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pinia": "^2.2.6",
+    "pinia": "^2.3.0",
     "primeicons": "^7.0.0",
-    "primeng": "18.0.0",
-    "primevue": "^4.2.3",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "~7.8.0",
+    "primeng": "19.0.0-rc.1",
+    "primevue": "^4.2.4",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "~7.8.1",
     "tailwindcss-primeui": "^0.3.4",
-    "tslib": "^2.3.0",
+    "tslib": "^2.8.1",
     "vite-plugin-electron": "^0.29.0",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "zone.js": "~0.14.3"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~18.1.0",
-    "@angular-devkit/core": "~18.1.0",
-    "@angular-devkit/schematics": "~18.1.0",
-    "@angular-eslint/eslint-plugin": "^18.3.0",
-    "@angular-eslint/eslint-plugin-template": "^18.3.0",
-    "@angular-eslint/template-parser": "^18.3.0",
-    "@angular/cli": "~18.1.0",
-    "@angular/compiler-cli": "~18.1.0",
-    "@angular/language-service": "~18.1.0",
-    "@angular/pwa": "^18.2.0",
-    "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.2",
-    "@nx/cypress": "20.0.8",
-    "@nx/eslint": "20.0.8",
-    "@nx/eslint-plugin": "20.0.8",
-    "@nx/jest": "20.0.8",
-    "@nx/js": "20.0.8",
-    "@nx/nest": "20.0.8",
-    "@nx/node": "20.0.8",
-    "@nx/vite": "20.0.8",
-    "@nx/vue": "20.0.8",
-    "@nx/web": "20.0.8",
-    "@nx/webpack": "20.0.8",
-    "@nx/workspace": "20.0.8",
-    "@schematics/angular": "~18.1.0",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@types/express": "4.17.14",
-    "@types/jest": "^29.5.12",
-    "@types/node": "18.16.9",
+    "@angular-devkit/build-angular": "~19.0.4",
+    "@angular-devkit/core": "~19.0.4",
+    "@angular-devkit/schematics": "~19.0.4",
+    "@angular-eslint/eslint-plugin": "^19.0.2",
+    "@angular-eslint/eslint-plugin-template": "^19.0.2",
+    "@angular-eslint/template-parser": "^19.0.2",
+    "@angular/cli": "~19.0.4",
+    "@angular/compiler-cli": "~19.0.3",
+    "@angular/language-service": "~19.0.3",
+    "@angular/pwa": "^19.0.4",
+    "@nestjs/schematics": "^10.2.3",
+    "@nestjs/testing": "^10.4.15",
+    "@nx/cypress": "20.2.1",
+    "@nx/eslint": "20.2.1",
+    "@nx/eslint-plugin": "20.2.1",
+    "@nx/jest": "20.2.1",
+    "@nx/js": "20.2.1",
+    "@nx/nest": "20.2.1",
+    "@nx/node": "20.2.1",
+    "@nx/vite": "20.2.1",
+    "@nx/vue": "20.2.1",
+    "@nx/web": "20.2.1",
+    "@nx/webpack": "20.2.1",
+    "@nx/workspace": "20.2.1",
+    "@schematics/angular": "~19.0.4",
+    "@swc-node/register": "~1.10.9",
+    "@swc/core": "~1.10.1",
+    "@swc/helpers": "~0.5.15",
+    "@types/express": "5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "22.10.1",
     "@types/passport-jwt": "^4.0.1",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
-    "@typescript-eslint/utils": "^7.16.0",
-    "@vitejs/plugin-vue": "^4.5.0",
-    "@vitest/coverage-v8": "^1.0.4",
-    "@vitest/ui": "^1.3.1",
-    "@vue/eslint-config-prettier": "7.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
+    "@typescript-eslint/utils": "^8.18.0",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
+    "@vue/eslint-config-prettier": "10.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/test-utils": "^2.4.1",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.20",
-    "cypress": "^13.13.0",
-    "electron": "^33.2.0",
+    "cypress": "^13.16.1",
+    "electron": "^33.2.1",
     "electron-builder": "^25.1.8",
-    "eslint": "~8.57.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-cypress": "^3.5.0",
-    "eslint-plugin-vue": "^9.16.1",
+    "eslint": "~9.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-cypress": "^4.1.0",
+    "eslint-plugin-vue": "^9.32.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "jest-preset-angular": "14.1.0",
-    "jsdom": "~22.1.0",
-    "nx": "20.0.8",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
-    "prisma": "^5.18.0",
-    "tailwindcss": "^3.4.13",
-    "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
-    "typescript": "~5.5.2",
-    "vite": "^5.0.0",
-    "vite-plugin-dts": "~3.8.1",
+    "jest-preset-angular": "14.4.2",
+    "jsdom": "~25.0.1",
+    "nx": "20.2.1",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "prisma": "^6.0.1",
+    "tailwindcss": "^3.4.16",
+    "ts-jest": "^29.2.5",
+    "ts-node": "10.9.2",
+    "typescript": "5.6.3",
+    "vite": "^6.0.3",
+    "vite-plugin-dts": "~4.3.0",
     "vite-plugin-electron-renderer": "^0.14.6",
-    "vitest": "^1.3.1",
-    "vue-tsc": "^2.0.0",
+    "vitest": "^2.1.8",
+    "vue-tsc": "^2.1.10",
     "webpack-cli": "^5.1.4"
   },
   "trustedDependencies": [
     "@nestjs/core",
+    "@parcel/watcher",
     "@prisma/client",
     "@prisma/engines",
+    "@scarf/scarf",
     "@swc/core",
     "bcrypt",
     "cypress",
