--- a/apps/client-web/project.json
+++ b/apps/client-web/project.json
@@ -23,7 +23,12 @@
           }
         ],
         "styles": ["apps/client-web/src/styles.scss"],
-        "scripts": []
+        "scripts": [],
+        "server": "apps/client-web/src/main.server.ts",
+        "ssr": {
+          "entry": "apps/client-web/src/server.ts"
+        },
+        "outputMode": "server"
       },
       "configurations": {
         "production": {
