Updated primeng to version 19.0.0

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@ngrx/store": "^18.1.1",
     "@ngrx/store-devtools": "^18.1.1",
     "@nx/angular": "20.2.1",
-    "@primeng/themes": "19.0.0-rc.1",
+    "@primeng/themes": "19.0.0",
     "@primevue/themes": "^4.2.4",
     "@prisma/client": "^6.0.1",
     "@supabase/supabase-js": "^2.47.3",
@@ -57,7 +57,7 @@
     "passport-local": "^1.0.0",
     "pinia": "^2.3.0",
     "primeicons": "^7.0.0",
-    "primeng": "19.0.0-rc.1",
+    "primeng": "19.0.0",
     "primevue": "^4.2.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "~7.8.1",
