--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ngrx/store-devtools": "^18.1.1",
     "@nx/angular": "20.2.2",
     "@primeng/themes": "19.0.0",
+    "@primevue/forms": "^4.2.5",
     "@primevue/themes": "^4.2.5",
     "@prisma/client": "^6.1.0",
     "@supabase/supabase-js": "^2.47.10",
@@ -66,6 +67,7 @@
     "vite-plugin-electron": "^0.29.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "zod": "^3.24.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
