--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/swagger": "^8.1.0",
-    "@ngrx/effects": "^18.1.1",
-    "@ngrx/eslint-plugin": "^18.1.1",
-    "@ngrx/operators": "^18.1.1",
-    "@ngrx/signals": "^18.1.1",
-    "@ngrx/store": "^18.1.1",
-    "@ngrx/store-devtools": "^18.1.1",
-    "@nx/angular": "20.2.2",
+    "@ngrx/effects": "19.0.0",
+    "@ngrx/eslint-plugin": "19.0.0",
+    "@ngrx/operators": "19.0.0",
+    "@ngrx/signals": "19.0.0",
+    "@ngrx/store": "19.0.0",
+    "@ngrx/store-devtools": "19.0.0",
+    "@nx/angular": "20.3.0",
     "@primeng/themes": "19.0.0",
     "@primevue/forms": "^4.2.5",
     "@primevue/themes": "^4.2.5",
@@ -85,18 +85,18 @@
     "@eslint/js": "~8.57.1",
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.15",
-    "@nx/cypress": "20.2.2",
-    "@nx/eslint": "20.2.2",
-    "@nx/eslint-plugin": "20.2.2",
-    "@nx/jest": "20.2.2",
-    "@nx/js": "20.2.2",
-    "@nx/nest": "20.2.2",
-    "@nx/node": "20.2.2",
-    "@nx/vite": "20.2.2",
-    "@nx/vue": "20.2.2",
-    "@nx/web": "20.2.2",
-    "@nx/webpack": "20.2.2",
-    "@nx/workspace": "20.2.2",
+    "@nx/cypress": "20.3.0",
+    "@nx/eslint": "20.3.0",
+    "@nx/eslint-plugin": "20.3.0",
+    "@nx/jest": "20.3.0",
+    "@nx/js": "20.3.0",
+    "@nx/nest": "20.3.0",
+    "@nx/node": "20.3.0",
+    "@nx/vite": "20.3.0",
+    "@nx/vue": "20.3.0",
+    "@nx/web": "20.3.0",
+    "@nx/webpack": "20.3.0",
+    "@nx/workspace": "20.3.0",
     "@schematics/angular": "~19.0.6",
     "@swc-node/register": "~1.10.9",
     "@swc/core": "~1.10.1",
@@ -126,7 +126,7 @@
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "14.4.2",
     "jsdom": "~25.0.1",
-    "nx": "20.2.2",
+    "nx": "20.3.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prisma": "^6.1.0",
