Implemented emails send

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -12,5 +12,14 @@
   ],
   "compilerOptions": {
     "esModuleInterop": true
+    // "assets": ["mail/templates/**/*"]
+    // "watchAssets": true
+    // "assets": [
+    //   {
+    //     "include": "mail/templates/**/*",
+    //     "outDir": "dist/",
+    //     "watchAssets": true
+    //   }
+    // ]
   }
 }
