--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@angular/pwa": "^19.0.6",
     "@eslint/eslintrc": "^2.1.4",
     "@eslint/js": "~8.57.1",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.15",
     "@nx/cypress": "20.3.0",
@@ -104,6 +105,7 @@
     "@types/express": "5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "22.10.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
     "@typescript-eslint/utils": "^8.18.1",
     "@vitejs/plugin-vue": "^5.2.1",
@@ -121,11 +123,13 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-vue": "^9.32.0",
+    "handlebars": "^4.7.8",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "14.4.2",
     "jsdom": "~25.0.1",
+    "nodemailer": "^6.9.16",
     "nx": "20.3.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
