--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -51,6 +51,12 @@
       "@e-commerce/admin-dashboard/core/domain": [
         "libs/admin-dashboard/core/domain/src/index.ts"
       ],
+      "@e-commerce/admin-dashboard/home/feature/home": [
+        "libs/admin-dashboard/home/feature/home/src/index.ts"
+      ],
+      "@e-commerce/admin-dashboard/home/feature/shell": [
+        "libs/admin-dashboard/home/feature/shell/src/index.ts"
+      ],
       "@e-commerce/client-web/account/api": [
         "libs/client-web/account/api/src/index.ts"
       ],
@@ -173,6 +179,9 @@
       ],
       "@e-commerce/client-web/shared/utils": [
         "libs/client-web/shared/utils/src/index.ts"
+      ],
+      "@e-commerce/data-access": [
+        "libs/admin-dashboard/home/data-access/src/index.ts"
       ],
       "@e-commerce/shared/api-models": ["libs/shared/api-models/src/index.ts"]
     }
