--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@types/passport-local": "^1.0.38",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "caniuse-lite": "^1.0.30001699",
+    "chart.js": "^4.4.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "eslint-plugin-deprecation": "^3.0.0",
@@ -66,6 +68,7 @@
     "tslib": "^2.8.1",
     "vite-plugin-electron": "^0.29.0",
     "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0",
     "zod": "^3.24.1",
     "zone.js": "~0.15.0"
